[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "distexprunner"
version = "0.0.1"
dependencies = [
]
authors = [
  { name="Matthias Jasny"},
]
description = "A suite to write and run distributed experiments across multiple network nodes"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
distexp-server = "bin.distexp_server:main"
distexp-client = "bin.distexp_client:main"
